fixed alignment

--- a/style/style.css
+++ b/style/style.css
@@ -666,7 +666,7 @@ nav .fas {
     font-size: 25px;
   }
   .header-text {
-    margin-top: 150%;
+    margin-top: 130%;
     font-size: 20px;
   }
   .header-text h1 {
